# oaf

./: .gitignore  Cargo.toml  LICENSE-MIT  README.dm  README.md
scripts/: release
src/: branch.rs  commands.rs  git.rs  lib.rs  main.rs  worktree.rs
tests/: find_target_branchname.rs  insert_branch.rs  switch.rs  switch_next.rs  unlink_branches.rs
tests/cmd/: cat.toml  checkout.toml  diff.toml  disconnect-branch.toml  fake-merge.toml  help.toml  ignore-changes.toml  ignore.toml  log.toml  merge-diff.toml  merge.toml  next-branch.toml  pipeline.toml  pull.toml  push-tags.toml  push.toml  restore.toml  revert.toml  show.toml  squash-commit.toml  status.toml  switch-next.toml  switch-prev.toml  switch.toml
tests/common/: mod.rs
