[package]
edition = "2021"
name = "oaf"
version = "0.1.5"
authors = ["Aaron Bentley <aaron@aaronbentley.com>"]
description = "A more user-friendly CLI for Git repositories"
homepage = "https://github.com/abentley/oaf"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/abentley/oaf"
[package.metadata.deb]
depends = "$auto,git"

[dependencies]
structopt = "0.3"
enum_dispatch = "0.3.7"

[features]
default = ["strict"]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
